# my-mcp-project

./: .env  README.md  app.py  browser_mcp.json  groq_test.py  pyproject.toml
