[project]
name = "mcpproject"
version = "0.1.0"
description = "An interactive, multi-tool AI assistant powered by LangChain, Groq LLM, and MCP for advanced conversational automation and tool integration."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-groq>=0.3.2",
    "langchain-openai>=0.3.16",
    "mcp-use>=1.2.8",
]
